--- a/package/network/config/firewall/files/firewall.config
+++ b/package/network/config/firewall/files/firewall.config
@@ -8,15 +8,14 @@ config defaults
 
 config zone
 	option name		lan
-	list   network		'lan'
+	option network		'lan0 lan1 lan2 lan3'
 	option input		ACCEPT
 	option output		ACCEPT
 	option forward		ACCEPT
 
 config zone
 	option name		wan
-	list   network		'wan'
-	list   network		'wan6'
+	option network		'wan0 wan1 wan2 wan3'
 	option input		REJECT
 	option output		ACCEPT
 	option forward		REJECT
