--- a/package/network/config/firewall/files/firewall.config
+++ b/package/network/config/firewall/files/firewall.config
@@ -12,6 +12,7 @@ config zone
 	option input		ACCEPT
 	option output		ACCEPT
 	option forward		ACCEPT
+	option mtu_fix		1
 
 config zone
 	option name		wan
