--- a/package/network/config/firewall/files/firewall.config
+++ b/package/network/config/firewall/files/firewall.config
@@ -4,7 +4,7 @@ config defaults
 	option output		ACCEPT
 	option forward		REJECT
 # Uncomment this line to disable ipv6 rules
-#	option disable_ipv6	1
+	option disable_ipv6	1
 
 config zone
 	option name		lan
@@ -55,65 +55,65 @@ config rule
 
 # Allow DHCPv6 replies
 # see https://dev.openwrt.org/ticket/10381
-config rule
-	option name		Allow-DHCPv6
-	option src		wan
-	option proto		udp
-	option src_ip		fc00::/6
-	option dest_ip		fc00::/6
-	option dest_port	546
-	option family		ipv6
-	option target		ACCEPT
+#config rule
+#	option name		Allow-DHCPv6
+#	option src		wan
+#	option proto		udp
+#	option src_ip		fc00::/6
+#	option dest_ip		fc00::/6
+#	option dest_port	546
+#	option family		ipv6
+#	option target		ACCEPT
 
-config rule
-	option name		Allow-MLD
-	option src		wan
-	option proto		icmp
-	option src_ip		fe80::/10
-	list icmp_type		'130/0'
-	list icmp_type		'131/0'
-	list icmp_type		'132/0'
-	list icmp_type		'143/0'
-	option family		ipv6
-	option target		ACCEPT
+#config rule
+#	option name		Allow-MLD
+#	option src		wan
+#	option proto		icmp
+#	option src_ip		fe80::/10
+#	list icmp_type		'130/0'
+#	list icmp_type		'131/0'
+#	list icmp_type		'132/0'
+#	list icmp_type		'143/0'
+#	option family		ipv6
+#	option target		ACCEPT
 
 # Allow essential incoming IPv6 ICMP traffic
-config rule
-	option name		Allow-ICMPv6-Input
-	option src		wan
-	option proto	icmp
-	list icmp_type		echo-request
-	list icmp_type		echo-reply
-	list icmp_type		destination-unreachable
-	list icmp_type		packet-too-big
-	list icmp_type		time-exceeded
-	list icmp_type		bad-header
-	list icmp_type		unknown-header-type
-	list icmp_type		router-solicitation
-	list icmp_type		neighbour-solicitation
-	list icmp_type		router-advertisement
-	list icmp_type		neighbour-advertisement
-	option limit		1000/sec
-	option family		ipv6
-	option target		ACCEPT
+#config rule
+#	option name		Allow-ICMPv6-Input
+#	option src		wan
+#	option proto	icmp
+#	list icmp_type		echo-request
+#	list icmp_type		echo-reply
+#	list icmp_type		destination-unreachable
+#	list icmp_type		packet-too-big
+#	list icmp_type		time-exceeded
+#	list icmp_type		bad-header
+#	list icmp_type		unknown-header-type
+#	list icmp_type		router-solicitation
+#	list icmp_type		neighbour-solicitation
+#	list icmp_type		router-advertisement
+#	list icmp_type		neighbour-advertisement
+#	option limit		1000/sec
+#	option family		ipv6
+#	option target		ACCEPT
 
 # Allow essential forwarded IPv6 ICMP traffic
-config rule
-	option name		Allow-ICMPv6-Forward
-	option src		wan
-	option dest		*
-	option proto		icmp
-	list icmp_type		echo-request
-	list icmp_type		echo-reply
-	list icmp_type		destination-unreachable
-	list icmp_type		packet-too-big
-	list icmp_type		time-exceeded
-	list icmp_type		bad-header
-	list icmp_type		unknown-header-type
-	option limit		1000/sec
-	option family		ipv6
-	option target		ACCEPT
-
+#config rule
+#	option name		Allow-ICMPv6-Forward
+#	option src		wan
+#	option dest		*
+#	option proto		icmp
+#	list icmp_type		echo-request
+#	list icmp_type		echo-reply
+#	list icmp_type		destination-unreachable
+#	list icmp_type		packet-too-big
+#	list icmp_type		time-exceeded
+#	list icmp_type		bad-header
+#	list icmp_type		unknown-header-type
+#	option limit		1000/sec
+#	option family		ipv6
+#	option target		ACCEPT
+#
 # include a file with users custom iptables rules
 config include
 	option path /etc/firewall.user
