--- a/base.config
+++ b/base.config
@@ -295,8 +295,8 @@ CONFIG_TARGET_SUFFIX="gnu"
 # CONFIG_IB is not set
 # CONFIG_SDK is not set
 # CONFIG_MAKE_TOOLCHAIN is not set
-# CONFIG_IMAGEOPT is not set
-# CONFIG_PREINITOPT is not set
+CONFIG_IMAGEOPT=y
+CONFIG_PREINITOPT=y
 CONFIG_TARGET_PREINIT_SUPPRESS_STDERR=y
 CONFIG_TARGET_PREINIT_TIMEOUT=2
 # CONFIG_TARGET_PREINIT_SHOW_NETMSG is not set
@@ -305,12 +305,21 @@ CONFIG_TARGET_PREINIT_IFNAME=""
 CONFIG_TARGET_PREINIT_IP="192.168.1.1"
 CONFIG_TARGET_PREINIT_NETMASK="255.255.255.0"
 CONFIG_TARGET_PREINIT_BROADCAST="192.168.1.255"
-# CONFIG_INITOPT is not set
+CONFIG_INITOPT=y
 CONFIG_TARGET_INIT_PATH="/usr/sbin:/usr/bin:/sbin:/bin"
 CONFIG_TARGET_INIT_ENV=""
 CONFIG_TARGET_INIT_CMD="/sbin/init"
 CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
-# CONFIG_VERSIONOPT is not set
+CONFIG_VERSIONOPT=y
+CONFIG_VERSION_DIST="AC1032"
+CONFIG_VERSION_NICK=""
+CONFIG_VERSION_NUMBER=""
+CONFIG_VERSION_REPO="http://downloads.openwrt.org/snapshots/trunk/%S/packages"
+CONFIG_VERSION_MANUFACTURER=""
+CONFIG_VERSION_MANUFACTURER_URL=""
+CONFIG_VERSION_PRODUCT=""
+CONFIG_VERSION_HWREV=""
+CONFIG_VERSION_FILENAMES=y
 CONFIG_PER_FEED_REPO=y
 CONFIG_PER_FEED_REPO_ADD_DISABLED=y
 CONFIG_PER_FEED_REPO_ADD_COMMENTED=y
@@ -321,7 +330,9 @@ CONFIG_FEED_telephony=y
 CONFIG_FEED_management=y
 CONFIG_FEED_targets=y
 CONFIG_FEED_oldpackages=y
-# CONFIG_SMIMEOPT is not set
+CONFIG_SMIMEOPT=y
+CONFIG_OPKGSMIME_CERT=""
+CONFIG_OPKGSMIME_KEY=""
 CONFIG_OPKGSMIME_PASSPHRASE=y
 
 #
@@ -1368,7 +1379,7 @@ CONFIG_BUSYBOX_CONFIG_IOCTL_HEX2STR_ERROR=y
 #
 # CONFIG_BUSYBOX_CONFIG_FEATURE_SEAMLESS_XZ is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_SEAMLESS_LZMA is not set
-# CONFIG_BUSYBOX_CONFIG_FEATURE_SEAMLESS_BZ2 is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_SEAMLESS_BZ2=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_SEAMLESS_GZ=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_SEAMLESS_Z is not set
 # CONFIG_BUSYBOX_CONFIG_AR is not set
@@ -1430,7 +1441,7 @@ CONFIG_BUSYBOX_CONFIG_TR=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_TR_EQUIV is not set
 # CONFIG_BUSYBOX_CONFIG_TRUNCATE is not set
 # CONFIG_BUSYBOX_CONFIG_UNLINK is not set
-# CONFIG_BUSYBOX_CONFIG_BASE64 is not set
+CONFIG_BUSYBOX_CONFIG_BASE64=y
 # CONFIG_BUSYBOX_CONFIG_CAL is not set
 # CONFIG_BUSYBOX_CONFIG_CATV is not set
 CONFIG_BUSYBOX_CONFIG_CHGRP=y
@@ -1446,7 +1457,8 @@ CONFIG_BUSYBOX_CONFIG_CUT=y
 CONFIG_BUSYBOX_CONFIG_DF=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_DF_FANCY is not set
 CONFIG_BUSYBOX_CONFIG_DIRNAME=y
-# CONFIG_BUSYBOX_CONFIG_DOS2UNIX is not set
+CONFIG_BUSYBOX_CONFIG_DOS2UNIX=y
+# CONFIG_BUSYBOX_CONFIG_UNIX2DOS is not set
 CONFIG_BUSYBOX_CONFIG_DU=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_DU_DEFAULT_BLOCKSIZE_1K=y
 CONFIG_BUSYBOX_CONFIG_ECHO=y
@@ -1481,7 +1493,7 @@ CONFIG_BUSYBOX_CONFIG_MKNOD=y
 CONFIG_BUSYBOX_CONFIG_MV=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_MV_LONG_OPTIONS is not set
 CONFIG_BUSYBOX_CONFIG_NICE=y
-# CONFIG_BUSYBOX_CONFIG_NOHUP is not set
+CONFIG_BUSYBOX_CONFIG_NOHUP=y
 # CONFIG_BUSYBOX_CONFIG_OD is not set
 # CONFIG_BUSYBOX_CONFIG_PRINTENV is not set
 CONFIG_BUSYBOX_CONFIG_PRINTF=y
@@ -1522,7 +1534,7 @@ CONFIG_BUSYBOX_CONFIG_UNIQ=y
 # CONFIG_BUSYBOX_CONFIG_UUENCODE is not set
 CONFIG_BUSYBOX_CONFIG_WC=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_WC_LARGE is not set
-# CONFIG_BUSYBOX_CONFIG_WHOAMI is not set
+CONFIG_BUSYBOX_CONFIG_WHOAMI=y
 CONFIG_BUSYBOX_CONFIG_YES=y
 
 #
@@ -1588,9 +1600,11 @@ CONFIG_BUSYBOX_CONFIG_AWK=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_AWK_LIBM=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_AWK_GNU_EXTENSIONS=y
 CONFIG_BUSYBOX_CONFIG_CMP=y
-# CONFIG_BUSYBOX_CONFIG_DIFF is not set
+CONFIG_BUSYBOX_CONFIG_DIFF=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_DIFF_LONG_OPTIONS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_DIFF_DIR=y
 # CONFIG_BUSYBOX_CONFIG_ED is not set
-# CONFIG_BUSYBOX_CONFIG_PATCH is not set
+CONFIG_BUSYBOX_CONFIG_PATCH=y
 CONFIG_BUSYBOX_CONFIG_SED=y
 CONFIG_BUSYBOX_CONFIG_VI=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_VI_MAX_LEN=1024
@@ -1615,15 +1629,15 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_ALLOW_EXEC=y
 CONFIG_BUSYBOX_CONFIG_FIND=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_PRINT0=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_MTIME=y
-# CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_MMIN is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_MMIN=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_PERM=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_TYPE=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_XDEV=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_MAXDEPTH=y
-# CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_NEWER is not set
-# CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_INUM is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_NEWER=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_INUM=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_EXEC=y
-# CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_EXEC_PLUS is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_EXEC_PLUS=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_USER=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_GROUP=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_NOT=y
@@ -1667,7 +1681,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_SHADOWPASSWDS=y
 # CONFIG_BUSYBOX_CONFIG_ADDGROUP is not set
 # CONFIG_BUSYBOX_CONFIG_DELUSER is not set
 # CONFIG_BUSYBOX_CONFIG_DELGROUP is not set
-# CONFIG_BUSYBOX_CONFIG_GETTY is not set
+CONFIG_BUSYBOX_CONFIG_GETTY=y
 # CONFIG_BUSYBOX_CONFIG_LOGIN is not set
 CONFIG_BUSYBOX_CONFIG_PASSWD=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_PASSWD_WEAK_CHECK=y
@@ -1846,9 +1860,9 @@ CONFIG_BUSYBOX_CONFIG_TIME=y
 # CONFIG_BUSYBOX_CONFIG_NAMEIF is not set
 # CONFIG_BUSYBOX_CONFIG_NBDCLIENT is not set
 CONFIG_BUSYBOX_CONFIG_NC=y
-# CONFIG_BUSYBOX_CONFIG_NC_SERVER is not set
-# CONFIG_BUSYBOX_CONFIG_NC_EXTRA is not set
-# CONFIG_BUSYBOX_CONFIG_NC_110_COMPAT is not set
+CONFIG_BUSYBOX_CONFIG_NC_SERVER=y
+CONFIG_BUSYBOX_CONFIG_NC_EXTRA=y
+CONFIG_BUSYBOX_CONFIG_NC_110_COMPAT=y
 CONFIG_BUSYBOX_CONFIG_PING=y
 CONFIG_BUSYBOX_CONFIG_PING6=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_FANCY_PING=y
@@ -1856,7 +1870,7 @@ CONFIG_BUSYBOX_CONFIG_WGET=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_STATUSBAR=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_AUTHENTICATION=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_LONG_OPTIONS=y
-# CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_TIMEOUT is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_TIMEOUT=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_OPENSSL is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_WGET_SSL_HELPER is not set
 # CONFIG_BUSYBOX_CONFIG_WHOIS is not set
@@ -1864,8 +1878,8 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_IPV6=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_UNIX_LOCAL is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_PREFER_IPV4_ADDRESS=y
 CONFIG_BUSYBOX_CONFIG_VERBOSE_RESOLUTION_ERRORS=y
-# CONFIG_BUSYBOX_CONFIG_ARP is not set
-# CONFIG_BUSYBOX_CONFIG_ARPING is not set
+CONFIG_BUSYBOX_CONFIG_ARP=y
+CONFIG_BUSYBOX_CONFIG_ARPING=y
 CONFIG_BUSYBOX_CONFIG_BRCTL=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_BRCTL_FANCY=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_BRCTL_SHOW=y
@@ -1952,13 +1966,13 @@ CONFIG_BUSYBOX_CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=80
 #
 # Process Utilities
 #
-# CONFIG_BUSYBOX_CONFIG_IOSTAT is not set
+CONFIG_BUSYBOX_CONFIG_IOSTAT=y
 # CONFIG_BUSYBOX_CONFIG_LSOF is not set
-# CONFIG_BUSYBOX_CONFIG_MPSTAT is not set
+CONFIG_BUSYBOX_CONFIG_MPSTAT=y
 # CONFIG_BUSYBOX_CONFIG_NMETER is not set
 # CONFIG_BUSYBOX_CONFIG_PMAP is not set
 # CONFIG_BUSYBOX_CONFIG_POWERTOP is not set
-# CONFIG_BUSYBOX_CONFIG_PSTREE is not set
+CONFIG_BUSYBOX_CONFIG_PSTREE=y
 # CONFIG_BUSYBOX_CONFIG_PWDX is not set
 # CONFIG_BUSYBOX_CONFIG_SMEMCAP is not set
 CONFIG_BUSYBOX_CONFIG_TOP=y
@@ -1985,7 +1999,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_PS_WIDE=y
 # CONFIG_BUSYBOX_CONFIG_RENICE is not set
 CONFIG_BUSYBOX_CONFIG_BB_SYSCTL=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_SHOW_THREADS is not set
-# CONFIG_BUSYBOX_CONFIG_WATCH is not set
+CONFIG_BUSYBOX_CONFIG_WATCH=y
 
 #
 # Runit Utilities
@@ -2809,17 +2823,17 @@ CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
 #
 # CONFIG_PACKAGE_dkjson is not set
 # CONFIG_PACKAGE_json4lua is not set
-CONFIG_PACKAGE_libiwinfo-lua=y
+# CONFIG_PACKAGE_libiwinfo-lua is not set
 # CONFIG_PACKAGE_lpeg is not set
 # CONFIG_PACKAGE_lsqlite3 is not set
 CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_lua-bencode is not set
-# CONFIG_PACKAGE_lua-cjson is not set
+CONFIG_PACKAGE_lua-cjson=y
 # CONFIG_PACKAGE_lua-copas is not set
 # CONFIG_PACKAGE_lua-coxpcall is not set
 # CONFIG_PACKAGE_lua-examples is not set
 # CONFIG_PACKAGE_lua-lzlib is not set
-# CONFIG_PACKAGE_lua-md5 is not set
+CONFIG_PACKAGE_lua-md5=y
 # CONFIG_PACKAGE_lua-mobdebug is not set
 # CONFIG_PACKAGE_lua-mosquitto is not set
 # CONFIG_PACKAGE_lua-penlight is not set
@@ -2833,7 +2847,7 @@ CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_luac is not set
 # CONFIG_PACKAGE_luacurl is not set
 # CONFIG_PACKAGE_luaexpat is not set
-# CONFIG_PACKAGE_luafilesystem is not set
+CONFIG_PACKAGE_luafilesystem=y
 # CONFIG_PACKAGE_luai2c is not set
 # CONFIG_PACKAGE_lualanes is not set
 # CONFIG_PACKAGE_luaposix is not set
@@ -2841,7 +2855,7 @@ CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_luarocks is not set
 # CONFIG_PACKAGE_luasec is not set
 # CONFIG_PACKAGE_luasoap is not set
-# CONFIG_PACKAGE_luasocket is not set
+CONFIG_PACKAGE_luasocket=y
 # CONFIG_PACKAGE_luasql-mysql is not set
 # CONFIG_PACKAGE_luasql-pgsql is not set
 # CONFIG_PACKAGE_luasql-sqlite3 is not set
@@ -3483,7 +3497,7 @@ CONFIG_PACKAGE_libpcre=y
 # CONFIG_PACKAGE_libradiusclient-ng is not set
 # CONFIG_PACKAGE_libreadline is not set
 # CONFIG_PACKAGE_libroxml is not set
-# CONFIG_PACKAGE_librpc is not set
+CONFIG_PACKAGE_librpc=y
 # CONFIG_PACKAGE_librpcsecgss is not set
 # CONFIG_PACKAGE_librrd is not set
 # CONFIG_PACKAGE_librrd1 is not set
@@ -3961,7 +3975,9 @@ CONFIG_PACKAGE_wget=y
 # CONFIG_PACKAGE_ebtables is not set
 # CONFIG_PACKAGE_fwknop is not set
 # CONFIG_PACKAGE_fwknopd is not set
-# CONFIG_PACKAGE_ip6tables is not set
+CONFIG_PACKAGE_ip6tables=y
+# CONFIG_PACKAGE_ip6tables-extra is not set
+# CONFIG_PACKAGE_ip6tables-mod-nat is not set
 # CONFIG_PACKAGE_ipkungfu is not set
 CONFIG_PACKAGE_iptables=y
 # CONFIG_PACKAGE_iptables-mod-account is not set
@@ -4006,7 +4022,7 @@ CONFIG_PACKAGE_iptables-mod-ipopt=y
 # CONFIG_PACKAGE_knock is not set
 # CONFIG_PACKAGE_knockd is not set
 # CONFIG_PACKAGE_miniupnpc is not set
-# CONFIG_PACKAGE_miniupnpd is not set
+CONFIG_PACKAGE_miniupnpd=y
 # CONFIG_PACKAGE_natpmp is not set
 # CONFIG_PACKAGE_natpmpc is not set
 # CONFIG_PACKAGE_nftables is not set
@@ -5156,18 +5172,18 @@ CONFIG_PACKAGE_zip=y
 #
 # zoneinfo
 #
-# CONFIG_PACKAGE_zoneinfo-africa is not set
-# CONFIG_PACKAGE_zoneinfo-asia is not set
-# CONFIG_PACKAGE_zoneinfo-atlantic is not set
-# CONFIG_PACKAGE_zoneinfo-australia-nz is not set
-# CONFIG_PACKAGE_zoneinfo-core is not set
-# CONFIG_PACKAGE_zoneinfo-europe is not set
-# CONFIG_PACKAGE_zoneinfo-india is not set
-# CONFIG_PACKAGE_zoneinfo-northamerica is not set
-# CONFIG_PACKAGE_zoneinfo-pacific is not set
-# CONFIG_PACKAGE_zoneinfo-poles is not set
-# CONFIG_PACKAGE_zoneinfo-simple is not set
-# CONFIG_PACKAGE_zoneinfo-southamerica is not set
+CONFIG_PACKAGE_zoneinfo-africa=y
+CONFIG_PACKAGE_zoneinfo-asia=y
+CONFIG_PACKAGE_zoneinfo-atlantic=y
+CONFIG_PACKAGE_zoneinfo-australia-nz=y
+CONFIG_PACKAGE_zoneinfo-core=y
+CONFIG_PACKAGE_zoneinfo-europe=y
+CONFIG_PACKAGE_zoneinfo-india=y
+CONFIG_PACKAGE_zoneinfo-northamerica=y
+CONFIG_PACKAGE_zoneinfo-pacific=y
+CONFIG_PACKAGE_zoneinfo-poles=y
+CONFIG_PACKAGE_zoneinfo-simple=y
+CONFIG_PACKAGE_zoneinfo-southamerica=y
 # CONFIG_PACKAGE_alsa-utils is not set
 # CONFIG_PACKAGE_alsa-utils-seq is not set
 # CONFIG_PACKAGE_alsa-utils-tests is not set
@@ -5300,7 +5316,7 @@ CONFIG_PACKAGE_libjson-script=y
 # CONFIG_PACKAGE_look is not set
 # CONFIG_PACKAGE_losetup is not set
 # CONFIG_PACKAGE_lrzsz is not set
-# CONFIG_PACKAGE_lsof is not set
+CONFIG_PACKAGE_lsof=y
 # CONFIG_PACKAGE_lxc is not set
 # CONFIG_PACKAGE_maccalc is not set
 # CONFIG_PACKAGE_macchanger is not set
