--- a/mt7621.config
+++ b/mt7621.config
@@ -38,9 +38,11 @@ CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_au1000 is not set
 CONFIG_TARGET_ramips=y
 # CONFIG_TARGET_arc770 is not set
+# CONFIG_TARGET_archs38 is not set
 # CONFIG_TARGET_ar7 is not set
 # CONFIG_TARGET_omap is not set
 # CONFIG_TARGET_uml is not set
+# CONFIG_TARGET_zynq is not set
 # CONFIG_TARGET_x86 is not set
 # CONFIG_TARGET_ramips_rt305x is not set
 # CONFIG_TARGET_ramips_mt7620 is not set
@@ -93,6 +95,7 @@ CONFIG_DEFAULT_ppp=y
 CONFIG_DEFAULT_ppp-mod-pppoe=y
 CONFIG_DEFAULT_swconfig=y
 CONFIG_DEFAULT_uci=y
+CONFIG_DEFAULT_uclient-fetch=y
 CONFIG_DEFAULT_wpad-mini=y
 CONFIG_AUDIO_SUPPORT=y
 CONFIG_GPIO_SUPPORT=y
@@ -155,6 +158,8 @@ CONFIG_SHADOW_PASSWORDS=y
 #
 # Kernel build options
 #
+CONFIG_KERNEL_BUILD_USER=""
+CONFIG_KERNEL_BUILD_DOMAIN=""
 CONFIG_KERNEL_PRINTK=y
 CONFIG_KERNEL_CRASHLOG=y
 CONFIG_KERNEL_SWAP=y
@@ -193,6 +198,7 @@ CONFIG_KERNEL_IPV6_MULTIPLE_TABLES=y
 CONFIG_KERNEL_IPV6_SUBTREES=y
 CONFIG_KERNEL_IPV6_MROUTE=y
 # CONFIG_KERNEL_IPV6_PIMSM_V2 is not set
+# CONFIG_KERNEL_IP_PNP is not set
 
 #
 # Package build options
@@ -259,7 +265,6 @@ CONFIG_EXTRA_BINUTILS_CONFIG_OPTIONS=""
 #
 # Compiler
 #
-# CONFIG_GCC_USE_VERSION_4_8_LINARO is not set
 CONFIG_GCC_USE_VERSION_5=y
 # CONFIG_GCC_USE_GRAPHITE is not set
 CONFIG_EXTRA_GCC_CONFIG_OPTIONS=""
@@ -273,8 +278,8 @@ CONFIG_SSP_SUPPORT=y
 #
 CONFIG_LIBC_USE_GLIBC=y
 # CONFIG_LIBC_USE_MUSL is not set
-# CONFIG_EGLIBC_USE_VERSION_2_19 is not set
 CONFIG_GLIBC_USE_VERSION_2_21=y
+# CONFIG_GLIBC_USE_VERSION_2_22 is not set
 
 #
 # Debuggers
@@ -288,7 +293,6 @@ CONFIG_GCC_VERSION="5.2.0"
 CONFIG_GCC_VERSION_5=y
 CONFIG_GLIBC_VERSION="2.21"
 CONFIG_GLIBC_VERSION_2_21=y
-CONFIG_GLIBC_REVISION="4e42b5b8f8"
 CONFIG_LIBC="glibc"
 CONFIG_LIBC_VERSION="2.21"
 CONFIG_TARGET_SUFFIX="gnu"
@@ -1005,7 +1009,7 @@ CONFIG_BUSYBOX_DEFAULT_NC=y
 CONFIG_BUSYBOX_DEFAULT_PING=y
 CONFIG_BUSYBOX_DEFAULT_PING6=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_FANCY_PING=y
-CONFIG_BUSYBOX_DEFAULT_WGET=y
+# CONFIG_BUSYBOX_DEFAULT_WGET is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_STATUSBAR=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_AUTHENTICATION=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_LONG_OPTIONS=y
@@ -1073,7 +1077,7 @@ CONFIG_BUSYBOX_DEFAULT_IP=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_ADDRESS=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_LINK=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_ROUTE=y
-CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_ROUTE_DIR="n"
+CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_ROUTE_DIR="/etc/iproute2"
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_TUNNEL is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_RULE=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_SHORT_FORMS is not set
@@ -2105,7 +2109,6 @@ CONFIG_PACKAGE_ubox=y
 CONFIG_PACKAGE_ubus=y
 CONFIG_PACKAGE_ubusd=y
 CONFIG_PACKAGE_uci=y
-# CONFIG_PACKAGE_udev is not set
 CONFIG_PACKAGE_usign=y
 # CONFIG_PACKAGE_wireless-tools is not set
 # CONFIG_PACKAGE_zram-swap is not set
@@ -2191,7 +2194,6 @@ CONFIG_PACKAGE_usign=y
 # CONFIG_PACKAGE_m4 is not set
 # CONFIG_PACKAGE_make is not set
 # CONFIG_PACKAGE_objdump is not set
-# CONFIG_PACKAGE_oprofile is not set
 # CONFIG_PACKAGE_patch is not set
 # CONFIG_PACKAGE_perf is not set
 # CONFIG_PACKAGE_pkg-config is not set
@@ -2226,6 +2228,7 @@ CONFIG_PACKAGE_usign=y
 # CONFIG_PACKAGE_iwl4965-firmware is not set
 # CONFIG_PACKAGE_iwlwifi-firmware is not set
 # CONFIG_PACKAGE_libertas-sdio-firmware is not set
+# CONFIG_PACKAGE_libertas-spi-firmware is not set
 # CONFIG_PACKAGE_libertas-usb-firmware is not set
 # CONFIG_PACKAGE_mt7601u-firmware is not set
 # CONFIG_PACKAGE_mwifiex-pcie-firmware is not set
@@ -2281,12 +2284,14 @@ CONFIG_PACKAGE_kmod-crypto-aead=y
 # CONFIG_PACKAGE_kmod-crypto-deflate is not set
 # CONFIG_PACKAGE_kmod-crypto-des is not set
 CONFIG_PACKAGE_kmod-crypto-ecb=y
+# CONFIG_PACKAGE_kmod-crypto-echainiv is not set
 # CONFIG_PACKAGE_kmod-crypto-fcrypt is not set
 # CONFIG_PACKAGE_kmod-crypto-gcm is not set
 # CONFIG_PACKAGE_kmod-crypto-gf128 is not set
 # CONFIG_PACKAGE_kmod-crypto-ghash is not set
 CONFIG_PACKAGE_kmod-crypto-hash=y
 # CONFIG_PACKAGE_kmod-crypto-hmac is not set
+# CONFIG_PACKAGE_kmod-crypto-hw-ccp is not set
 # CONFIG_PACKAGE_kmod-crypto-hw-geode is not set
 # CONFIG_PACKAGE_kmod-crypto-hw-hifn-795x is not set
 # CONFIG_PACKAGE_kmod-crypto-hw-padlock is not set
@@ -2312,6 +2317,11 @@ CONFIG_PACKAGE_kmod-crypto-sha1=y
 # CONFIG_PACKAGE_kmod-crypto-xts is not set
 # CONFIG_PACKAGE_kmod-cryptodev is not set
 # CONFIG_PACKAGE_kmod-loop-aes is not set
+
+#
+# DSA Support
+#
+# CONFIG_PACKAGE_kmod-dsa is not set
 
 #
 # Filesystems
@@ -2583,7 +2593,6 @@ CONFIG_PACKAGE_kmod-pppoe=y
 # CONFIG_PACKAGE_kmod-pppol2tp is not set
 CONFIG_PACKAGE_kmod-pppox=y
 CONFIG_PACKAGE_kmod-pptp=y
-# CONFIG_PACKAGE_kmod-rxrpc is not set
 # CONFIG_PACKAGE_kmod-sched is not set
 # CONFIG_PACKAGE_kmod-sched-connmark is not set
 # CONFIG_PACKAGE_kmod-sched-core is not set
@@ -2758,6 +2767,7 @@ CONFIG_PACKAGE_kmod-nos=y
 # CONFIG_PACKAGE_kmod-iwlwifi is not set
 # CONFIG_PACKAGE_kmod-lib80211 is not set
 # CONFIG_PACKAGE_kmod-libertas-sdio is not set
+# CONFIG_PACKAGE_kmod-libertas-spi is not set
 # CONFIG_PACKAGE_kmod-libertas-usb is not set
 # CONFIG_PACKAGE_kmod-libipw is not set
 # CONFIG_PACKAGE_kmod-mac80211 is not set
@@ -3201,15 +3211,11 @@ CONFIG_PACKAGE_libxtables=y
 # CONFIG_PACKAGE_libmatrixssl is not set
 # CONFIG_PACKAGE_libmbedtls is not set
 CONFIG_PACKAGE_libopenssl=y
-
-#
-# Configuration
-#
 CONFIG_OPENSSL_WITH_EC=y
 # CONFIG_OPENSSL_WITH_EC2M is not set
 # CONFIG_OPENSSL_WITH_SSL3 is not set
-# CONFIG_OPENSSL_ENGINE_CRYPTO is not set
 # CONFIG_OPENSSL_HARDWARE_SUPPORT is not set
+# CONFIG_OPENSSL_ENGINE_CRYPTO is not set
 # CONFIG_PACKAGE_libpolarssl is not set
 
 #
@@ -3547,7 +3553,7 @@ CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci=y
 CONFIG_PACKAGE_libuci-lua=y
 # CONFIG_PACKAGE_libucl is not set
-# CONFIG_PACKAGE_libuclient is not set
+CONFIG_PACKAGE_libuclient=y
 # CONFIG_PACKAGE_libuecc is not set
 # CONFIG_PACKAGE_libugpio is not set
 # CONFIG_PACKAGE_libunbound is not set
@@ -4932,7 +4938,7 @@ CONFIG_PACKAGE_tcpdump-mini=y
 # CONFIG_PACKAGE_tunslip6 is not set
 # CONFIG_PACKAGE_u2pnpd is not set
 # CONFIG_PACKAGE_ucarp is not set
-# CONFIG_PACKAGE_uclient-fetch is not set
+CONFIG_PACKAGE_uclient-fetch=y
 # CONFIG_PACKAGE_ucspi-tcp is not set
 # CONFIG_PACKAGE_udpcast is not set
 # CONFIG_PACKAGE_udpxy is not set
@@ -5156,6 +5162,7 @@ CONFIG_PACKAGE_zip=y
 #
 # disc
 #
+# CONFIG_PACKAGE_blkdiscard is not set
 # CONFIG_PACKAGE_blkid is not set
 # CONFIG_PACKAGE_cfdisk is not set
 # CONFIG_PACKAGE_devio is not set
