--- a/mt7621.config
+++ b/mt7621.config
@@ -2070,6 +2070,7 @@ CONFIG_PACKAGE_dropbear=y
 CONFIG_DROPBEAR_CURVE25519=y
 # CONFIG_DROPBEAR_ECC is not set
 # CONFIG_PACKAGE_ead is not set
+# CONFIG_PACKAGE_eudev is not set
 CONFIG_PACKAGE_firewall=y
 CONFIG_PACKAGE_fstools=y
 CONFIG_FSTOOLS_UBIFS_EXTROOT=y
@@ -2190,6 +2191,7 @@ CONFIG_PACKAGE_usign=y
 # CONFIG_PACKAGE_gdb is not set
 # CONFIG_PACKAGE_gdbserver is not set
 # CONFIG_PACKAGE_libdmalloc is not set
+# CONFIG_PACKAGE_libtool-bin is not set
 # CONFIG_PACKAGE_lttng-tools is not set
 # CONFIG_PACKAGE_m4 is not set
 # CONFIG_PACKAGE_make is not set
@@ -2615,6 +2617,7 @@ CONFIG_PACKAGE_kmod-tun=y
 #
 # CONFIG_PACKAGE_kmod-6lowpan is not set
 # CONFIG_PACKAGE_kmod-ath3k is not set
+CONFIG_PACKAGE_kmod-auth-redirect=y
 # CONFIG_PACKAGE_kmod-bcma is not set
 # CONFIG_PACKAGE_kmod-bluetooth is not set
 # CONFIG_PACKAGE_kmod-bluetooth_6lowpan is not set
@@ -3287,6 +3290,10 @@ CONFIG_OPENSSL_WITH_EC=y
 # CONFIG_PACKAGE_icu is not set
 # CONFIG_PACKAGE_id3lib is not set
 # CONFIG_PACKAGE_jansson is not set
+# CONFIG_PACKAGE_libglpk is not set
+# CONFIG_PACKAGE_knot-libdnssec is not set
+# CONFIG_PACKAGE_knot-libknot is not set
+# CONFIG_PACKAGE_knot-libzscanner is not set
 # CONFIG_PACKAGE_libIDL2 is not set
 # CONFIG_PACKAGE_libaa is not set
 # CONFIG_PACKAGE_libaio is not set
@@ -3375,7 +3382,6 @@ CONFIG_PACKAGE_libcharset=y
 # CONFIG_PACKAGE_libgd is not set
 # CONFIG_PACKAGE_libgdbm is not set
 # CONFIG_PACKAGE_libgee is not set
-# CONFIG_PACKAGE_libglpk is not set
 # CONFIG_PACKAGE_libgmp is not set
 # CONFIG_PACKAGE_libgnurl is not set
 # CONFIG_PACKAGE_libgpg-error is not set
@@ -3675,6 +3681,7 @@ CONFIG_PACKAGE_luci-base=y
 #
 # 3. Applications
 #
+# CONFIG_PACKAGE_luci-app-adblock is not set
 # CONFIG_PACKAGE_luci-app-ahcp is not set
 # CONFIG_PACKAGE_luci-app-asterisk is not set
 # CONFIG_PACKAGE_luci-app-bcp38 is not set
@@ -3829,6 +3836,7 @@ CONFIG_POSTFIX_SASL=y
 CONFIG_POSTFIX_LDAP=y
 # CONFIG_POSTFIX_DB is not set
 CONFIG_POSTFIX_CDB=y
+# CONFIG_POSTFIX_EAI is not set
 # CONFIG_PACKAGE_procmail is not set
 # CONFIG_PACKAGE_ssmtp is not set
 # CONFIG_PACKAGE_xmail is not set
@@ -4110,7 +4118,7 @@ CONFIG_PACKAGE_isc-dhcp-server-ipv4=y
 # CONFIG_PACKAGE_knot is not set
 # CONFIG_PACKAGE_knot-dig is not set
 # CONFIG_PACKAGE_knot-host is not set
-# CONFIG_PACKAGE_knot-libknot is not set
+# CONFIG_PACKAGE_knot-keymgr is not set
 # CONFIG_PACKAGE_knot-nsec3hash is not set
 # CONFIG_PACKAGE_knot-nsupdate is not set
 # CONFIG_PACKAGE_knot-tests is not set
@@ -4476,6 +4484,7 @@ CONFIG_PACKAGE_mwan3=y
 # CONFIG_PACKAGE_strongswan-mod-blowfish is not set
 # CONFIG_PACKAGE_strongswan-mod-ccm is not set
 # CONFIG_PACKAGE_strongswan-mod-cmac is not set
+# CONFIG_PACKAGE_strongswan-mod-connmark is not set
 # CONFIG_PACKAGE_strongswan-mod-constraints is not set
 # CONFIG_PACKAGE_strongswan-mod-coupling is not set
 # CONFIG_PACKAGE_strongswan-mod-ctr is not set
@@ -4617,6 +4626,7 @@ CONFIG_NGINX_HTTP_UPSTREAM_LEAST_CONN=y
 CONFIG_NGINX_HTTP_UPSTREAM_KEEPALIVE=y
 CONFIG_NGINX_HTTP_CACHE=y
 CONFIG_NGINX_PCRE=y
+CONFIG_NGINX_NAXSI=y
 # CONFIG_PACKAGE_obfsproxy is not set
 # CONFIG_PACKAGE_pdnsd is not set
 # CONFIG_PACKAGE_pepsal is not set
@@ -4772,6 +4782,7 @@ CONFIG_NGINX_PCRE=y
 CONFIG_PACKAGE_ipset=y
 # CONFIG_PACKAGE_ipset-dns is not set
 # CONFIG_PACKAGE_iptraf is not set
+# CONFIG_PACKAGE_iptraf-ng is not set
 # CONFIG_PACKAGE_iputils-arping is not set
 # CONFIG_PACKAGE_iputils-clockdiff is not set
 # CONFIG_PACKAGE_iputils-ping is not set
@@ -4927,7 +4938,6 @@ CONFIG_PACKAGE_pppdump=y
 CONFIG_PACKAGE_tcpdump-mini=y
 # CONFIG_PACKAGE_tcptraceroute is not set
 # CONFIG_PACKAGE_tctool is not set
-# CONFIG_PACKAGE_tgt is not set
 # CONFIG_PACKAGE_tor is not set
 # CONFIG_PACKAGE_tor-fw-helper is not set
 # CONFIG_PACKAGE_tor-geoip is not set
@@ -4979,7 +4989,31 @@ CONFIG_WPA_MSG_MIN_PRIORITY=3
 #
 # Puppies
 #
+CONFIG_PACKAGE_auth_tool=y
+CONFIG_PACKAGE_base=y
+CONFIG_PACKAGE_cfgmgr=y
+CONFIG_PACKAGE_chkfirmware=y
+CONFIG_PACKAGE_cloudcli=y
+CONFIG_PACKAGE_essential=y
+CONFIG_PACKAGE_logserver=y
+CONFIG_PACKAGE_lua-encrypt=y
+CONFIG_PACKAGE_lua-mongoose=y
+CONFIG_PACKAGE_lua-redis-parser=y
+CONFIG_PACKAGE_lua-se=y
+CONFIG_PACKAGE_lua-struct=y
+CONFIG_PACKAGE_lua53=y
+CONFIG_PACKAGE_myinit=y
+CONFIG_PACKAGE_netutil=y
+CONFIG_PACKAGE_rds=y
+CONFIG_PACKAGE_redis=y
+CONFIG_PACKAGE_sand=y
+CONFIG_PACKAGE_status=y
 CONFIG_PACKAGE_tbqd=y
+CONFIG_PACKAGE_tenacious=y
+CONFIG_PACKAGE_uciweb=y
+CONFIG_PACKAGE_userauth=y
+CONFIG_PACKAGE_websrv=y
+CONFIG_PACKAGE_zuci=y
 
 #
 # Sound
@@ -5256,6 +5290,7 @@ CONFIG_PACKAGE_dmesg=y
 # CONFIG_PACKAGE_dt is not set
 # CONFIG_PACKAGE_dtach is not set
 # CONFIG_PACKAGE_dump1090 is not set
+# CONFIG_PACKAGE_dvtm is not set
 # CONFIG_PACKAGE_empty is not set
 # CONFIG_PACKAGE_event_test is not set
 # CONFIG_PACKAGE_evtest is not set
@@ -5263,7 +5298,6 @@ CONFIG_PACKAGE_dmesg=y
 # CONFIG_PACKAGE_fancontroled is not set
 # CONFIG_PACKAGE_fconfig is not set
 CONFIG_PACKAGE_file=y
-# CONFIG_PACKAGE_firmwarehotplug is not set
 # CONFIG_PACKAGE_flashrom is not set
 # CONFIG_PACKAGE_flashrom-pci is not set
 # CONFIG_PACKAGE_flashrom-spi is not set
@@ -5276,7 +5310,6 @@ CONFIG_PACKAGE_file=y
 # CONFIG_PACKAGE_freenetconfd-plugin-examples is not set
 # CONFIG_PACKAGE_freesub is not set
 # CONFIG_PACKAGE_ftdi_eeprom is not set
-# CONFIG_PACKAGE_fxload is not set
 # CONFIG_PACKAGE_gammu is not set
 # CONFIG_PACKAGE_gawk is not set
 # CONFIG_PACKAGE_getopt is not set
@@ -5382,6 +5415,7 @@ CONFIG_PACKAGE_procd-nand=y
 # CONFIG_PACKAGE_pwgen is not set
 # CONFIG_PACKAGE_px5g is not set
 # CONFIG_PACKAGE_px5g-standalone is not set
+# CONFIG_PACKAGE_qemu-ga is not set
 # CONFIG_PACKAGE_qrencode is not set
 # CONFIG_PACKAGE_rcs is not set
 # CONFIG_PACKAGE_remind is not set
@@ -5444,7 +5478,6 @@ CONFIG_PACKAGE_ubi-utils=y
 # CONFIG_PACKAGE_usbutils is not set
 # CONFIG_PACKAGE_uuidd is not set
 # CONFIG_PACKAGE_uuidgen is not set
-# CONFIG_PACKAGE_uvcdynctrl is not set
 # CONFIG_PACKAGE_v4l-utils is not set
 # CONFIG_PACKAGE_view1090 is not set
 # CONFIG_PACKAGE_watchcat is not set
