--- a/mt7621.config
+++ b/mt7621.config
@@ -1854,7 +1854,7 @@ CONFIG_BUSYBOX_CONFIG_LOCK=y
 # CONFIG_BUSYBOX_CONFIG_SETSID is not set
 CONFIG_BUSYBOX_CONFIG_STRINGS=y
 CONFIG_BUSYBOX_CONFIG_TIME=y
-# CONFIG_BUSYBOX_CONFIG_TIMEOUT is not set
+CONFIG_BUSYBOX_CONFIG_TIMEOUT=y
 # CONFIG_BUSYBOX_CONFIG_TTYSIZE is not set
 # CONFIG_BUSYBOX_CONFIG_VOLNAME is not set
 # CONFIG_BUSYBOX_CONFIG_WATCHDOG is not set
@@ -3575,7 +3575,7 @@ CONFIG_PACKAGE_libuclient=y
 # CONFIG_PACKAGE_libustream-openssl is not set
 # CONFIG_PACKAGE_libustream-polarssl is not set
 # CONFIG_PACKAGE_libuuid is not set
-# CONFIG_PACKAGE_libuv is not set
+CONFIG_PACKAGE_libuv=y
 # CONFIG_PACKAGE_libuvc is not set
 # CONFIG_PACKAGE_libv4l is not set
 # CONFIG_PACKAGE_libvncserver is not set
@@ -4598,6 +4598,7 @@ CONFIG_PACKAGE_nginx=y
 CONFIG_NGINX_SSL=y
 # CONFIG_NGINX_DAV is not set
 # CONFIG_NGINX_FLV is not set
+CONFIG_NGINX_LUA=y
 # CONFIG_NGINX_STUB_STATUS is not set
 CONFIG_NGINX_HTTP_CHARSET=y
 CONFIG_NGINX_HTTP_GZIP=y
@@ -5002,6 +5003,7 @@ CONFIG_PACKAGE_lua-redis-parser=y
 CONFIG_PACKAGE_lua-se=y
 CONFIG_PACKAGE_lua-struct=y
 CONFIG_PACKAGE_lua53=y
+CONFIG_PACKAGE_luv=y
 CONFIG_PACKAGE_myinit=y
 CONFIG_PACKAGE_netutil=y
 CONFIG_PACKAGE_rds=y
