--- a/mt7621.config
+++ b/mt7621.config
@@ -5009,6 +5009,7 @@ CONFIG_PACKAGE_netutil=y
 CONFIG_PACKAGE_rds=y
 CONFIG_PACKAGE_redis=y
 CONFIG_PACKAGE_sand=y
+# CONFIG_PACKAGE_ski is not set
 CONFIG_PACKAGE_status=y
 CONFIG_PACKAGE_tbqd=y
 CONFIG_PACKAGE_tenacious=y
