hhc:td2843 修改x86v3.1R后台一直报错的问题

--- a/package/libs/openssl/Makefile
+++ b/package/libs/openssl/Makefile
@@ -134,6 +134,8 @@ else
   endif
 endif
 
+OPENSSL_OPTIONS+=no-asm
+
 STAMP_CONFIGURED := $(STAMP_CONFIGURED)_$(subst $(space),_,$(OPENSSL_OPTIONS))
 
 define Build/Configure
