fix the platform error in Makefile

--- a/package/boot/uboot-envtools/Makefile
+++ b/package/boot/uboot-envtools/Makefile
@@ -115,7 +115,7 @@ ifneq ($(CONFIG_TARGET_ramips),)
 endif
 ifneq ($(CONFIG_TARGET_rtkmips),)
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
-	$(INSTALL_DATA) ./files/ramips $(1)/etc/uci-defaults/30_uboot-envtools
+	$(INSTALL_DATA) ./files/rtkmips $(1)/etc/uci-defaults/30_uboot-envtools
 endif
 endef
 
